Edit category - update action

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -87,6 +87,12 @@ section {
 	border-width: 0 10px;
 }
 
+.category-desc::after {
+	content: "";
+	clear: both;
+	display: block;
+}
+
 .btn{
 	position: relative;
 	overflow: hidden;
