--- a/public/adminlte/main.css
+++ b/public/adminlte/main.css
@@ -57,3 +57,9 @@ a:hover {
     top: 0;
     font-size: 30px;
 }
+
+label.required::before {
+    content: '* ';
+    color: #f00;
+    font-weight: bold;
+}
